--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
-*~
-*.pyc
-*.egg-info
-*.o
-*.a
-build
-dist
+*.eggs/
+*.egg
+*.egg-info/
+*.log
+*.manifest
+*.py[cod]
+*.so
+*.spec
+.cache
+.coverage
+.installed.cfg
+.Python
+.tox/
+__pycache__/
+build/
+coverage.xml
+develop-eggs/
+dist/
+docs/_build/
+downloads/
+eggs/
+env/
+htmlcov/
+lib/
+lib64/
+nosetests.xml
+parts/
+pip-delete-this-directory.txt
+pip-log.txt
+sdist/
+target/
+var/
